--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "snowpack build",
     "test": "jest",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
     "react": "^16.13.1",
@@ -16,6 +16,16 @@
     "@testing-library/react": "^10.4.8",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "eslint": "^7.7.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jest-dom": "^3.1.7",
+    "eslint-plugin-jest-formatting": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.6.0",
     "jest": "^26.4.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.7.7",
