--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "jest",
+    "test": "is-ci \"test:coverage\" \"test:watch\"",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx .",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(json|[jt]sx?|html)\"",
+    "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
     "check-types": "tsc",
-    "format": "npm run prettier -- --write",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx ."
+    "validate": "npm-run-all --parallel check-types check-format lint build"
   },
   "dependencies": {
     "react": "^16.13.1",
@@ -29,7 +33,10 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-testing-library": "^3.6.0",
+    "is-ci-cli": "^2.1.2",
     "jest": "^26.4.0",
+    "jest-watch-typeahead": "^0.6.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "snowpack": "^2.8.0",
     "typescript": "^3.9.7"
