--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-testing-library": "^3.6.0",
+    "husky": "^4.2.5",
     "is-ci-cli": "^2.1.2",
     "jest": "^26.4.0",
     "jest-watch-typeahead": "^0.6.0",
+    "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "snowpack": "^2.8.0",
