--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.9.0",
+    "@snowpack/plugin-build-script": "^2.0.5",
+    "@tailwindcss/ui": "^0.5.0",
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.9",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "autoprefixer": "^9.8.6",
     "eslint": "^7.7.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-jest-dom": "^3.1.7",
@@ -39,8 +42,10 @@
     "jest-watch-typeahead": "^0.6.0",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
     "prettier": "^2.0.5",
     "snowpack": "^2.8.0",
+    "tailwindcss": "^1.7.3",
     "typescript": "^3.9.7"
   }
 }
