--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -1,4 +1,9 @@
 {
   "extends": "@snowpack/app-scripts-react",
-  "plugins": []
+  "plugins": [
+    [
+      "@snowpack/plugin-build-script",
+      { "cmd": "postcss", "input": [".css"], "output": [".css"] }
+    ]
+  ]
 }
