--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/ui": "^0.5.0",
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.1",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
