--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validate": "npm-run-all --parallel check-types check-format lint build"
   },
   "dependencies": {
+    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
