--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "formik": "^2.1.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-query": "^2.9.0"
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.9.0",
