--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^26.4.1",
     "jest-watch-typeahead": "^0.6.0",
     "lint-staged": "^10.2.11",
+    "msw": "^0.20.5",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "prettier": "^2.0.5",
