Add React Router

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^2.9.0"
+    "react-query": "^2.9.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.9.0",
