Add React Query DevTools

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^2.9.0",
+    "react-query-devtools": "^2.4.4",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
