--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^2.3.1",
+    "react-helmet": "^6.1.0",
     "react-query": "^2.12.1",
     "react-query-devtools": "^2.4.4",
     "react-router-dom": "^5.2.0"
@@ -31,6 +32,7 @@
     "@testing-library/user-event": "^12.1.3",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "autoprefixer": "^9.8.6",
