--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "validate": "npm-run-all --parallel check-types check-format lint build"
   },
   "dependencies": {
-    "formik": "^2.2.3",
+    "formik": "^2.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.0.2",
     "react-helmet": "^6.1.0",
-    "react-query": "^2.26.2",
+    "react-query": "^2.26.3",
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0"
   },
@@ -27,34 +27,35 @@
     "@snowpack/app-scripts-react": "^1.12.6",
     "@snowpack/plugin-build-script": "^2.0.11",
     "@tailwindcss/ui": "^0.7.2",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "autoprefixer": "^9.8.6",
-    "eslint": "^7.13.0",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jest-dom": "^3.2.4",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "autoprefixer": "^10.0.4",
+    "eslint": "^7.14.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest-dom": "^3.3.0",
     "eslint-plugin-jest-formatting": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.10.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^4.3.0",
     "is-ci-cli": "^2.1.2",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.5.1",
-    "msw": "^0.21.3",
+    "lint-staged": "^10.5.2",
+    "msw": "^0.22.3",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.2",
-    "prettier": "^2.1.2",
-    "snowpack": "^2.17.0",
-    "tailwindcss": "^1.9.6",
+    "postcss": "^8.1.10",
+    "postcss-cli": "^8.3.0",
+    "prettier": "^2.2.1",
+    "snowpack": "^2.17.1",
+    "tailwindcss": "^2.0.1",
     "typescript": "^3.9.7"
   }
 }
